tests/125_while_non_bool_func_result_error.scj
// Test 125: while condition must be Bool even when coming from function call
func id(x: Int64): Int64 {
    return x
}
while (id(1)) {
    println(1)
}
// ExpectError: While condition must be Bool
